--- a/package.json
+++ b/package.json
@@ -41,5 +41,6 @@
     "eslint": "8.55.0",
     "eslint-plugin-simple-import-sort": "10.0.0",
     "typescript": "5.3.3"
-  }
+  },
+  "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
 }
